--- a/assets/templates/importerform.html
+++ b/assets/templates/importerform.html
@@ -4,8 +4,13 @@
 
 <div class="container p-3 my-3 bg-dark text-white">
   <h1>Import the data</h1>
+  <form action="{%url 'importbulkfile'%}" method="POST" enctype="multipart/form-data">
+    {%csrf_token%}
+    <input type="file" name="myfile">
+    <button type="submit" class="btn btn-primary">Import file</button>
+  </form>
 
-  <h2>Click here <a href="{%url 'importBulk'%}"><button type="submit" class="btn btn-primary">Import</button></a> </h2>
+  <h2>Click here to import Default Values <a href="{%url 'importBulk'%}"><button type="submit" class="btn btn-primary">Import</button></a> </h2>
  {% if messages %}
      {% for message in messages %}
        <font color='PINK'> {{ message }}</font>
